# code-assist

./: .gitignore  CAULK.md  Cargo.toml  README.md
src/: app.rs  config.rs  main.rs
src/analysis/: parser.rs  structure.rs
src/commands/: executor.rs
src/fs/: edit.rs  mod.rs  search.rs
src/git/: commands.rs  diff.rs  history.rs  mod.rs
src/llm/: client.rs  context.rs  mod.rs  prompt.rs
src/memory/: mod.rs
src/ui/: display.rs  mod.rs  prompt.rs
