[package]
name = "code-assist"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An agentic coding assistant that works with local LLMs"
readme = "README.md"
repository = "https://github.com/yourusername/code-assist"
license = "MIT"
keywords = ["cli", "ai", "coding", "assistant"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
git2 = "0.17"
anyhow = "1.0"
thiserror = "1.0"
crossterm = "0.27"
ratatui = "0.23"
walkdir = "2.3"
regex = "1.9"
ignore = "0.4"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
toml = "0.7"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1.68"
colored = "2.0"
