[package]
name = "code-assist"
version = "0.1.0"
edition = "2021"
authors = ["Helder Goncalves <heldergoncalves@example.com>"]
description = "An agentic coding assistant that works with local LLMs"
readme = "README.md"
repository = "https://github.com/helder/code-assist"
license = "MIT"
keywords = ["cli", "ai", "coding", "assistant", "llm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
git2 = "0.17"
anyhow = "1.0"
thiserror = "1.0"
crossterm = "0.27"
ratatui = "0.23"
walkdir = "2.3"
regex = "1.9"
ignore = "0.4"
glob = "0.3.1"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-cpp = "0.20"
toml = "0.7"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1.68"
colored = "2.0"
indicatif = "0.17"
chrono = "0.4"
futures = "0.3"
serde_yaml = "0.9"
once_cell = "1.18"
cfg-if = "1.0"
rayon = "1.7"
strum = { version = "0.25", features = ["derive"] }
